# polymarket_odd_maker

./: .env.example  .gitignore  README.md  alembic.ini  dev-with-logs.sh  dev.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 20cb50116c95_add_stop_loss_pct_to_bot_state.py  237ecd5154b4_add_market_filters_and_polymarket_tree_.py  53cec702c555_add_wallet_config_table.py  7a861608a888_initial_empty_schema.py  8213f18583f5_add_risk_fields_to_bot_state.py  b440ab278050_add_polymarket_tokens_and_decision_log.py  bc38535ceabd_add_event_matches.py  ce68b1a98869_add_odds_snapshots.py  d60d7404b759_add_external_events.py  e437b998fd4e_add_bot_state_orders_positions.py  fca6d243f89e_add_exit_policy_partial_state_and_.py
backend/: __init__.py  app.py  config.py  db.py  main.py  models.py
backend/api/: auth.py  bot.py  decisions.py  filters.py  history.py  matcher.py  orders.py  risk.py  scrapers.py  wallet.py  watcher.py
backend/crypto/: vault.py
backend/engine/: decision.py  ev.py  odds_bus.py  position_manager.py  retention.py  risk_monitor.py  trading.py
backend/matcher/: matcher.py  normalize.py
backend/polymarket/: client.py  clob_client.py  resolver.py  tree.py  watcher.py
backend/positions/: risk.py
frontend/: package-lock.json
scripts/: smoke_balance_cache.py  smoke_decision_knobs.py  smoke_exit_policy.py  smoke_fill_accuracy.py  smoke_history.py  smoke_partial_cancel.py  smoke_position_manager.py  smoke_proxies.py  smoke_race_position_manager.py  smoke_risk_manager.py  smoke_vault_locked_wallet.py  smoke_zombie_order.py
(+17 files in other folders)
